# bingo

./: .gitignore  LICENSE  Makefile  README.md  benchmark_test.go  config.yaml.template  go.mod  go.sum  init.md  main.go  main_test.go  rules.yaml.template
config/: config.go  config_test.go  reloader.go
docs/: ACTION_EXTENSION.md  HA.md  REDIS_CONNECTIONS.md  TESTING.md
engine/: cel.go  cel_test.go  matcher.go  matcher_test.go  rule.go
executor/: executor.go  executor_test.go  grpc.go  kafka.go  log.go  log_test.go  rabbitmq.go  redis.go  redis_test.go  webhook.go
internal/ha/: lock.go
internal/logger/: benchmark_test.go  logger.go
internal/metrics/: metrics.go
listener/: binlog.go  event.go  event_test.go  position.go
py_tool/: db_tool.py  http_server.py  kafka_consumer.py  pyproject.toml  rabbitmq_consumer.py
utils/: debounce.go  template.go  template_test.go
